# autogen-etl-monitor

./: .gitignore  README.md  pyproject.toml
data/: customer_profiles.json  product_catalog.csv  sales_transactions.csv
data/schemas/: expected_customers.json  expected_products.json  expected_sales.json
src/etl_monitor/: __init__.py  config.py  main.py
src/etl_monitor/agents/: diagnostician.py  monitor.py  remediation.py  reporter.py  watchdog.py
src/etl_monitor/display/: console.py
src/etl_monitor/pipeline/: failures.py  history.py  simulator.py  stages.py  state.py
src/etl_monitor/team/: workflow.py
src/etl_monitor/tools/: history.py  inspection.py  log_analysis.py  remediation.py  reporting.py
tests/: test_history.py  test_pipeline.py  test_tools.py  test_workflow.py
